# usb-stash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILE_FORMAT.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml  run.sh
.github/workflows/: ci.yml  release.yml
crates/usbstash-cli/: Cargo.toml
crates/usbstash-cli/src/: error.rs  main.rs  password.rs
crates/usbstash-cli/src/commands/: add.rs  create.rs  extract.rs  list.rs  mod.rs
crates/usbstash-cli/tests/: cli_integration.rs
crates/usbstash-core/: Cargo.toml
crates/usbstash-core/src/: crypto.rs  error.rs  format.rs  lib.rs  stash.rs
crates/usbstash-core/tests/: crypto_tests.rs  error_tests.rs  format_tests.rs  stash_error_tests.rs  stash_tests.rs  vectors.rs
crates/usbstash-gui/: Cargo.toml
crates/usbstash-gui/src/: app.rs  main.rs
crates/usbstash-gui/src/screens/: create.rs  explorer.rs  login.rs  mod.rs  settings.rs
crates/usbstash-gui/src/widgets/: context_menu.rs  entropy_bar.rs  file_table.rs  mod.rs  password_input.rs  tree_view.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  stores.ts  tree.ts
frontend/src/lib/__tests__/: EntropyBar.test.ts  FileRow-preview.test.ts  PasswordInput.test.ts  PreviewOverlay.test.ts  api-readEntry.test.ts  canSubmit.test.ts  tree.test.ts
frontend/src/lib/components/: AutoLockTimer.ts  ContextMenu.svelte  DropZone.svelte  EntropyBar.svelte  FileList.svelte  FileRow.svelte  PasswordInput.svelte  PreviewOverlay.svelte  SearchBar.svelte  StatusBar.svelte  TreeNodeItem.svelte  TreeView.svelte
frontend/src/routes/: Create.svelte  Explorer.svelte  Login.svelte  Settings.svelte
scripts/: USB_README.txt  build-portable.ps1  build-portable.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
