[package]
name = "usb-stash"
version = "0.1.4"
edition = "2024"
description = "USB Stash — Tauri 2 desktop application"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
usbstash-core = { path = "../crates/usbstash-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
