[package]
name = "usbstash-cli"
version = "0.1.2"
edition = "2024"
description = "CLI tool for USB Stash encrypted vault"
license = "MIT"

[[bin]]
name = "usbstash"
path = "src/main.rs"

[dependencies]
usbstash-core = { path = "../usbstash-core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
thiserror = "2.0"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
